--- a/markov-transition-models.html
+++ b/markov-transition-models.html
@@ -373,7 +373,7 @@ div.csl-indent {
 <div id="time-series-cross-sectional-data" class="section level2 unnumbered hasAnchor">
 <h2>Time Series, Cross-Sectional Data<a href="markov-transition-models.html#time-series-cross-sectional-data" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>We are now entering the real world, as we will start to look at how characteristics vary, not only across different countries, but also across time. I have already presented the structure of time-series, cross-sectional (TSCS) data in Week 1, but to jog your memory, here it is again:</p>
-<table style="width:50%; color: black; margin-left: auto; margin-right: auto;" class="table">
+<table style="width:40%; color: black; margin-left: auto; margin-right: auto;" class="table">
 <caption>
 <span id="tab:tscs7">Table 10: </span>Schematic: Time-Series, Cross-Sectional Data
 </caption>
@@ -392,7 +392,7 @@ literacy
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left;min-width: 1.25in; ">
+<td style="text-align:left;">
 A
 </td>
 <td style="text-align:right;">
@@ -403,7 +403,7 @@ A
 </td>
 </tr>
 <tr>
-<td style="text-align:left;min-width: 1.25in; ">
+<td style="text-align:left;">
 A
 </td>
 <td style="text-align:right;">
@@ -414,7 +414,7 @@ A
 </td>
 </tr>
 <tr>
-<td style="text-align:left;min-width: 1.25in; ">
+<td style="text-align:left;">
 A
 </td>
 <td style="text-align:right;">
@@ -425,7 +425,7 @@ A
 </td>
 </tr>
 <tr>
-<td style="text-align:left;min-width: 1.25in; ">
+<td style="text-align:left;">
 A
 </td>
 <td style="text-align:right;">
@@ -436,7 +436,7 @@ A
 </td>
 </tr>
 <tr>
-<td style="text-align:left;min-width: 1.25in; ">
+<td style="text-align:left;">
 B
 </td>
 <td style="text-align:right;">
@@ -447,7 +447,7 @@ B
 </td>
 </tr>
 <tr>
-<td style="text-align:left;min-width: 1.25in; ">
+<td style="text-align:left;">
 B
 </td>
 <td style="text-align:right;">
@@ -458,7 +458,7 @@ B
 </td>
 </tr>
 <tr>
-<td style="text-align:left;min-width: 1.25in; ">
+<td style="text-align:left;">
 B
 </td>
 <td style="text-align:right;">
@@ -469,7 +469,7 @@ B
 </td>
 </tr>
 <tr>
-<td style="text-align:left;min-width: 1.25in; ">
+<td style="text-align:left;">
 B
 </td>
 <td style="text-align:right;">
