--- a/linear-regression---theory.html
+++ b/linear-regression---theory.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Introduction Regression is the power house of the social sciences. It is widely applied and takes many different forms. In this Chapter we are going to explore the linear variant, estimated...">
-<meta property="og:description" content="Introduction Regression is the power house of the social sciences. It is widely applied and takes many different forms. In this Chapter we are going to explore the linear variant, estimated...">
-<meta name="twitter:description" content="Introduction Regression is the power house of the social sciences. It is widely applied and takes many different forms. In this Chapter we are going to explore the linear variant, estimated...">
+<meta name="description" content="Introduction Regression is the power house of the social sciences. It is widely applied and takes many different forms. In this section we are going to explore the linear variant, estimated...">
+<meta property="og:description" content="Introduction Regression is the power house of the social sciences. It is widely applied and takes many different forms. In this section we are going to explore the linear variant, estimated...">
+<meta name="twitter:description" content="Introduction Regression is the power house of the social sciences. It is widely applied and takes many different forms. In this section we are going to explore the linear variant, estimated...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -128,7 +128,7 @@
 <div id="introduction" class="section level2 unnumbered">
 <h2>Introduction<a class="anchor" aria-label="anchor" href="#introduction"><i class="fas fa-link"></i></a>
 </h2>
-<p><span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">Regression</a></span> is the power house of the social sciences. It is widely applied and takes many different forms. In this Chapter we are going to explore the linear variant, estimated through a method called Ordinary Least Squares (OLS). This type of regression is used if our dependent variable is continuous. In Week 3 we will have a look at regression with a binary dependent variable and the calculation of the probability to fall into either of those two categories. But let’s first turn to linear regression.</p>
+<p><span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">Regression</a></span> is the power house of the social sciences. It is widely applied and takes many different forms. In this section we are going to explore the linear variant, estimated through a method called Ordinary Least Squares (OLS). This type of regression is used if our dependent variable is continuous. In Week 3 we will have a look at regression with a binary dependent variable and the calculation of the probability to fall into either of those two categories. But let’s first turn to linear regression.</p>
 <hr>
 </div>
 <div id="what-is-it" class="section level2 unnumbered">
@@ -138,15 +138,15 @@
 <p><strong>Regression - What is it?</strong></p>
 <p>YouTube link to follow</p>
 </div>
-<p>Regression is not only able to identify the direction of a relationship between an independent and a dependent variable, it is also able to quantify the size of the effect. Let us choose <code>Y</code> as our dependent variable, and <code>X</code> as our independent variable. We have some data which we are displaying in a scatter plot:</p>
+<p>Regression is not only able to identify the direction of a relationship between an independent and a dependent variable, it is also able to quantify the size of the effect. Let us choose <code>y</code> as our dependent variable, and <code>x</code> as our independent variable. We have some data which we are displaying in a scatter plot:</p>
 <div class="figure" style="text-align: center">
 <span style="display:block;" id="fig:scatter"></span>
 <img src="files/Week%202/scatter.png" alt="\label{fig:scatter}Scatter Plot" width="50%"><p class="caption">
 Figure 13: Scatter Plot
 </p>
 </div>
-<p>With a little goodwill we can already see that there is a positive relationship: as <code>X</code> increases, <code>Y</code> increases, as well. Now, imagine taking a ruler and trying to fit in a line that best describes the relationship depicted by these points. This will be our <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">regression line</a></span>.</p>
-<p>The position of a line in a coordinate system is usually described by two items: the <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">intercept</a></span> with the Y-axis, and the <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">slope</a></span> of the line. The slope is defined as rise over run, and indicates by how much Y increases (or decreases is the slope is negative) if we add an additional unit of X. In the notation which follows we will call the intercept <span class="math inline">\(\beta_{0}\)</span>, and the slope <span class="math inline">\(\beta_{1}\)</span>. It will be our task to estimate these values, also called <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">coefficients</a></span> You can see this depicted graphically here:</p>
+<p>With a little goodwill we can already see that there is a positive relationship: as <code>x</code> increases, <code>y</code> increases, as well. Now, imagine taking a ruler and trying to fit in a line that best describes the relationship depicted by these points. This will be our <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">regression line</a></span>.</p>
+<p>The position of a line in a coordinate system is usually described by two items: the <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">intercept</a></span> with the Y-axis, and the <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">slope</a></span> of the line. The slope is defined as rise over run, and indicates by how much <span class="math inline">\(y\)</span> increases (or decreases is the slope is negative) if we add an additional unit of <span class="math inline">\(x\)</span>. In the notation which follows we will call the intercept <span class="math inline">\(\beta_{0}\)</span>, and the slope <span class="math inline">\(\beta_{1}\)</span>. It will be our task to estimate these values, also called <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">coefficients</a></span>. You can see this depicted graphically here:</p>
 <div class="figure" style="text-align: center">
 <span style="display:block;" id="fig:regline"></span>
 <img src="files/Week%202/regline.png" alt="\label{fig:regline}Regression Line" width="50%"><p class="caption">
@@ -165,32 +165,32 @@ Figure 15: Democracy and Development in 2015
 </h3>
 <p>We will first assume here that we are dealing with the population and not a sample. The regression line we have just drawn would then be called the <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">Population Regression Function</a></span> (PRF) and is written as follows:</p>
 <p><span class="math display">\[\begin{equation}
-E(Y|X_{i}) = \beta_{0} + \beta_{1} X_{i}
+E(y|x_{i}) = \beta_{0} + \beta_{1} x_{i}
 \end{equation}\]</span></p>
-<p>Because we are dealing with the population, the line is the geometric locus of all the expected values of the dependent variable <code>Y</code>, given the values of the independent variables <code>X</code>, also known as the <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">conditional expectation function</a></span> (which value of Y would we expect, on average, for a given Y?). This has to do with the approach to statistics that underpins this module: frequentist statistics (as opposed to Bayesian statistics). We are understanding all values to be “in the long run”, and if we sampled repeatedly from a population, then the expected value is the value we would, well, expect to see most often in the long run.</p>
-<p>The regression line is not intercepting with all observations. Only two are located on the line, and all others have a little distance between them and the PRF. These distances between <span class="math inline">\(E(Y|X_{i})\)</span> and <span class="math inline">\(Y_{i}\)</span> are called <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">error terms</a></span> and are denoted as <span class="math inline">\(\epsilon_{i}\)</span>.</p>
+<p><span class="math inline">\(E(Y|X_{i})\)</span> reads as the expected value of <span class="math inline">\(y\)</span>, given a particular observation of <span class="math inline">\(x\)</span>, and so the population regression function is also known as the <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">conditional expectation function</a></span>. It represents the average value of <span class="math inline">\(y\)</span> we expect to observe, if <span class="math inline">\(x\)</span> is equal to a particular value.</p>
+<p>As you can see, the line is not intercepting with all observations – it only represents the conditional averages, after all. Only two observations are located on the line, and all others have a little distance between them and the PRF. These distances between <span class="math inline">\(E(y|x_{i})\)</span> and <span class="math inline">\(y_{i}\)</span> are called <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">error terms</a></span> and are denoted as <span class="math inline">\(\epsilon_{i}\)</span>.</p>
 <div class="figure" style="text-align: center">
 <span style="display:block;" id="fig:errors"></span>
 <img src="files/Week%202/errors.png" alt="\label{fig:errors}Errors" width="50%"><p class="caption">
 Figure 16: Errors
 </p>
 </div>
-<p>To describe the observations <span class="math inline">\(Y_{i}\)</span> we therefore need to add the error terms to the PRF:</p>
+<p>To describe the observations <span class="math inline">\(y_{i}\)</span> we therefore need to add the error terms to the PRF:</p>
 <p><span class="math display">\[\begin{equation}
-Y_{i} = \beta_{0} + \beta_{1} X_{i} + \epsilon_{i}
+y_{i} = \beta_{0} + \beta_{1} x_{i} + \epsilon_{i}
 \end{equation}\]</span></p>
 </div>
 <div id="sample" class="section level3 unnumbered">
 <h3>Sample<a class="anchor" aria-label="anchor" href="#sample"><i class="fas fa-link"></i></a>
 </h3>
-<p>In reality we hardly ever have the population in the social sciences, and we generally have to contend with a sample. Nonetheless, we can construct a regression line on the basis of the sample, the <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">Sample Regression Function</a></span> (SRF). It is important to note that the nature of the regression line we derive from the sample will be different for every sample, as each sample will have other values in it. Rarely, the PRF is the same as the SRF - but we are always using the SRF to estimate the PRF.</p>
+<p>In reality we hardly ever have the population in the social sciences, and we generally have to contend ourselves with a sample. Nonetheless, we can construct a regression line on the basis of the sample, the <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">Sample Regression Function</a></span> (SRF). It is important to note that the nature of the regression line we derive from the sample will be different for every sample, as each sample will have other values in it. Rarely, the PRF is the same as the SRF - but we are always using the SRF to estimate the PRF.</p>
 <p>In order to flag this up in the notation we use to specify the SRF, we are using little hats over everything we estimate, like this:</p>
 <p><span class="math display">\[\begin{equation}
-\hat{Y}_{i} = \hat{\beta}_{0} + \hat{\beta}_{1} X_{i}
+\hat{y}_{i} = \hat{\beta}_{0} + \hat{\beta}_{1} x_{i}
 \end{equation}\]</span></p>
-<p>Analogously, we would would describe the observations <span class="math inline">\(Y_{i}\)</span> by adding the estimated error terms <span class="math inline">\(\hat{\epsilon}_{i}\)</span> to the equation.</p>
+<p>Analogously, we would would describe the observations <span class="math inline">\(y_{i}\)</span> by adding the estimated error terms <span class="math inline">\(\hat{\epsilon}_{i}\)</span> to the equation.</p>
 <p><span class="math display">\[\begin{equation}
-Y_{i} = \hat{\beta}_{0} + \hat{\beta}_{1} X_{i} + \hat{\epsilon}_{i}
+y_{i} = \hat{\beta}_{0} + \hat{\beta}_{1} x_{i} + \hat{\epsilon}_{i}
 \end{equation}\]</span></p>
 <p>These estimated error terms, <span class="math inline">\(\hat{\epsilon}_{i}\)</span>, are called <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">residuals</a></span>. The following graph visualises the relationship between an observation, the PRF, the SRF, the error terms, and the residuals.</p>
 <div class="figure" style="text-align: center">
@@ -205,7 +205,7 @@ Figure 17: Population vs. Sample Regression Function
 <div id="ordinary-least-squares-ols" class="section level2 unnumbered">
 <h2>Ordinary Least Squares (OLS)<a class="anchor" aria-label="anchor" href="#ordinary-least-squares-ols"><i class="fas fa-link"></i></a>
 </h2>
-<p>When you eye-balled the scatter plot at the start of this Chapter in order to fit a line through it, you have sub-consciously done so by minimising the distance between each of the observations and the line. Or put differently, you have tried to minimise the error term <span class="math inline">\(\hat{\epsilon}_{i}\)</span>. This is basically the intuition behind fitting the SRF mathematically, too. We try to minimise the sum of all error terms, so that all observations are as close to the regression line as possible. The only problem that we encounter when doing this is that these distances will always sum up to zero.</p>
+<p>When you eye-balled the scatter plot at the start of this Chapter in order to fit a line through it, you have sub-consciously done so by minimising the distance between each of the observations and the line. Or put differently, you have tried to minimise the error terms <span class="math inline">\(\hat{\epsilon}_{i}\)</span>. This is basically the intuition behind fitting the SRF mathematically, too. We try to minimise the sum of all error terms, so that all observations are as close to the regression line as possible. The only problem that we encounter when doing this is that these distances will always sum up to zero.</p>
 <p>But similar to calculating the standard deviation where the differences between the observations and the mean would sum up to zero (essentially we are doing the same thing here), we simply square those distances. So we are not minimising the sum of distances between observations and the regression line, but the sum of the <strong>squared</strong> distances between the observations and the regression line. Graphically, we would end up with little squares made out of each <span class="math inline">\(\hat{\epsilon}_{i}\)</span> which gives the the method its name: <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">Ordinary Least Squares</a></span> (OLS).</p>
 <div class="figure" style="text-align: center">
 <span style="display:block;" id="fig:ols"></span>
