--- a/principles-of-statistical-inference.html
+++ b/principles-of-statistical-inference.html
@@ -303,9 +303,9 @@ Figure 12: The p-Value
 <p><span style="display:block; height: 0.5em;"></span></p>
 <p>Avoid phrasing that implies certainty, such as:</p>
 <ul>
-<li>❌ “We proved the alternative hypothesis.”</li>
-<li>❌ “We proved that there is an effect.”</li>
-<li>❌ “We accept the alternative hypothesis.”</li>
+<li>🚫 “We proved the alternative hypothesis.”</li>
+<li>🚫 “We proved that there is an effect.”</li>
+<li>🚫 “We accept the alternative hypothesis.”</li>
 </ul>
 </li>
 </ol>
@@ -322,9 +322,9 @@ Figure 12: The p-Value
 <p><span style="display:block; height: 0.5em;"></span></p>
 <p>Avoid phrasing that overstates what the test can tell you, such as:</p>
 <ul>
-<li>❌ “We proved the null hypothesis.”</li>
-<li>❌ “We reject the alternative hypothesis.”</li>
-<li>❌ “The null hypothesis is true.”</li>
+<li>🚫 “We proved the null hypothesis.”</li>
+<li>🚫 “We reject the alternative hypothesis.”</li>
+<li>🚫 “The null hypothesis is true.”</li>
 </ul>
 </li>
 </ol>
