--- a/list-of-references.html
+++ b/list-of-references.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Adcock, R., &amp; Collier, D. (2001). Measurement Validity: A Shared Standard for Qualitative and Quantitative Research. American Political Science Review, 95(3), 529–546.  Arel-Bundock, V. (2022)....">
-<meta property="og:description" content="Adcock, R., &amp; Collier, D. (2001). Measurement Validity: A Shared Standard for Qualitative and Quantitative Research. American Political Science Review, 95(3), 529–546.  Arel-Bundock, V. (2022)....">
-<meta name="twitter:description" content="Adcock, R., &amp; Collier, D. (2001). Measurement Validity: A Shared Standard for Qualitative and Quantitative Research. American Political Science Review, 95(3), 529–546.  Arel-Bundock, V. (2022)....">
+<meta name="description" content="Adcock, R., &amp; Collier, D. (2001). Measurement Validity: A Shared Standard for Qualitative and Quantitative Research. American Political Science Review, 95(3), 529–546....">
+<meta property="og:description" content="Adcock, R., &amp; Collier, D. (2001). Measurement Validity: A Shared Standard for Qualitative and Quantitative Research. American Political Science Review, 95(3), 529–546....">
+<meta name="twitter:description" content="Adcock, R., &amp; Collier, D. (2001). Measurement Validity: A Shared Standard for Qualitative and Quantitative Research. American Political Science Review, 95(3), 529–546....">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -128,52 +128,52 @@
 
 <div id="refs" class="references csl-bib-body hanging-indent" entry-spacing="0" line-spacing="2">
 <div id="ref-adcock:2001" class="csl-entry">
-Adcock, R., &amp; Collier, D. (2001). <span class="nocase">Measurement Validity: A Shared Standard for Qualitative and Quantitative Research</span>. <em><span>American Political Science Review</span></em>, <em>95</em>(3), 529–546.
+Adcock, R., &amp; Collier, D. (2001). <span class="nocase">Measurement Validity: A Shared Standard for Qualitative and Quantitative Research</span>. <em><span>American Political Science Review</span></em>, <em>95</em>(3), 529–546. <a href="https://doi.org/10.1017/S0003055401003100">https://doi.org/10.1017/S0003055401003100</a>
 </div>
 <div id="ref-arel:2022" class="csl-entry">
 Arel-Bundock, V. (2022). <span class="nocase">modelsummary: Data and Model Summaries in R</span>. <em>Journal of Statistical Software</em>, <em>103</em>(1), 1–23.
 </div>
 <div id="ref-boix:2003" class="csl-entry">
-Boix, C., &amp; Stokes, S. (2003). <span>Endogenous Democratization</span>. <em><span>World Politics</span></em>, <em>55</em>, 517–549.
+Boix, C., &amp; Stokes, S. (2003). <span>Endogenous Democratization</span>. <em><span>World Politics</span></em>, <em>55</em>, 517–549. https://doi.org/<a href="https://doi.org/10.1353/wp.2003.0019">https://doi.org/10.1353/wp.2003.0019</a>
 </div>
 <div id="ref-brambor:2006" class="csl-entry">
-Brambor, T., Clark, W. R., &amp; Golder, M. (2006). <span>Understanding Interaction Models: Improving Empirical Analysis</span>. <em><span>Political Analysis</span></em>, <em>14</em>, 62–83.
+Brambor, T., Clark, W. R., &amp; Golder, M. (2006). <span>Understanding Interaction Models: Improving Empirical Analysis</span>. <em><span>Political Analysis</span></em>, <em>14</em>, 62–83. <a href="https://doi.org/10.1093/pan/mpi014">https://doi.org/10.1093/pan/mpi014</a>
 </div>
 <div id="ref-bryman:2021" class="csl-entry">
 Clark, T., Foster, L., &amp; Bryman, A. (2021). <em><span class="nocase">Bryman’s Social Research Methods</span></em> (Sixth). Oxford: Oxford University Press.
 </div>
 <div id="ref-diamond:1992" class="csl-entry">
-Diamond, L. (1992). <span class="nocase">Economic Development and Democracy Reconsidered</span>. <em><span>American Behavioral Scientist</span></em>, <em>35</em>(4/5), 450–499.
+Diamond, L. (1992). <span class="nocase">Economic Development and Democracy Reconsidered</span>. <em><span>American Behavioral Scientist</span></em>, <em>35</em>(4/5), 450–499. <a href="https://doi.org/10.1177/000276429203500407">https://doi.org/10.1177/000276429203500407</a>
 </div>
 <div id="ref-epstein:2006" class="csl-entry">
-Epstein, D. L., Bates, R., Goldstone, J., Kristensen, I., &amp; O’Halloran, S. (2006). <span>Democratic Transitions</span>. <em><span>American Journal of Political Science</span></em>, <em>50</em>(3), 551–569.
+Epstein, D. L., Bates, R., Goldstone, J., Kristensen, I., &amp; O’Halloran, S. (2006). <span>Democratic Transitions</span>. <em><span>American Journal of Political Science</span></em>, <em>50</em>(3), 551–569. <a href="https://doi.org/10.1111/j.1540-5907.2006.00201.x">https://doi.org/10.1111/j.1540-5907.2006.00201.x</a>
 </div>
 <div id="ref-fogarty:2023" class="csl-entry">
 Fogarty, B. J. (2023). <em><span>Quantitative Social Science Data With R</span></em> (Second). Thousand Oaks, <span>CA</span>: Sage.
 </div>
 <div id="ref-king:1995" class="csl-entry">
-King, G. (1995). <span class="nocase">Replication, replication</span>. <em>PS: Political Science and Politics</em>, <em>28</em>(3), 541–559.
+King, G. (1995). <span class="nocase">Replication, replication</span>. <em>PS: Political Science and Politics</em>, <em>28</em>(3), 541–559. <a href="https://doi.org/10.2307/420301">https://doi.org/10.2307/420301</a>
 </div>
 <div id="ref-lipset:1959" class="csl-entry">
-Lipset, S. M. (1959). <span class="nocase">Some Social Requisites of Democracy: Economic Development and Political Legitimacy</span>. <em>The American Political Science Review</em>, <em>53</em>(1), 69–105.
+Lipset, S. M. (1959). <span class="nocase">Some Social Requisites of Democracy: Economic Development and Political Legitimacy</span>. <em>The American Political Science Review</em>, <em>53</em>(1), 69–105. <a href="https://doi.org/10.2307/1951731">https://doi.org/10.2307/1951731</a>
 </div>
 <div id="ref-long:2019" class="csl-entry">
 Long, J. D., &amp; Teetor, P. (2019). <em><span class="nocase">R cookbook: proven recipes for data analysis, statistics, and graphics</span></em>. O’Reilly Media.
 </div>
 <div id="ref-scott:1997" class="csl-entry">
-Long, J. S. (1997). <em><span class="nocase">Regression Models for Categorial and Limited Dependent Variables</span></em>. Thousand Oaks: Sage.
+Long, J. S. (1997). <em><span class="nocase">Regression Models for Categorial and Limited Dependent Variables</span></em>. Thousand Oaks: Sage. <a href="https://doi.org/10.2307/3006005">https://doi.org/10.2307/3006005</a>
 </div>
 <div id="ref-marshall:2020" class="csl-entry">
-Marshall, M. G., &amp; Gurr, T. R. (2020). <em><span class="nocase">Polity V Project: Political Regime Characteristics and Transitions, 1800-2018</span></em>. available online at <a href="https://www.systemicpeace.org/inscr/p5manualv2018.pdf" class="uri">https://www.systemicpeace.org/inscr/p5manualv2018.pdf</a>.
+Marshall, M. G., &amp; Gurr, T. R. (2020). <em><span class="nocase">Polity V Project: Political Regime Characteristics and Transitions, 1800-2018</span></em>.
 </div>
 <div id="ref-boix:2022" class="csl-entry">
 Miller, M., Boix, C., &amp; Rosato, S. (2022). <em><span class="nocase">Boix-Miller-Rosato Dichotomous Coding of Democracy, 1800-2020</span></em> (Version V1) [Data set]. Harvard Dataverse. <a href="https://doi.org/10.7910/DVN/FENWWR">https://doi.org/10.7910/DVN/FENWWR</a>
 </div>
 <div id="ref-oxford" class="csl-entry">
-Oxford Learner’s Dictionaries. (n.d.). available online at <a href="https://www.oxfordlearnersdictionaries.com/" class="uri">https://www.oxfordlearnersdictionaries.com/</a>.
+Oxford Learner’s Dictionaries. (n.d.). <a href="https://www.oxfordlearnersdictionaries.com/">https://www.oxfordlearnersdictionaries.com/</a>
 </div>
 <div id="ref-prz:2000" class="csl-entry">
-Przeworski, A., Alvarez, M. E., Cheibub, J. A., &amp; Limongi, F. (2000). <em><span class="nocase">Democracy and Development - Political Institutions and Well-Being in the World, 1950-1990</span></em>. Cambridge: Cambridge University Press.
+Przeworski, A., Alvarez, M. E., Cheibub, J. A., &amp; Limongi, F. (2000). <em><span class="nocase">Democracy and Development - Political Institutions and Well-Being in the World, 1950-1990</span></em>. Cambridge: Cambridge University Press. https://doi.org/<a href="https://doi.org/10.1017/CBO9780511804946">https://doi.org/10.1017/CBO9780511804946</a>
 </div>
 <div id="ref-reiche:forthcoming" class="csl-entry">
 Reiche, F. (forthcoming). <em><span class="nocase">Introduction to Quantitative Methods in the Social Sciences</span></em>. Oxford: Oxford University Press.
@@ -185,7 +185,7 @@ Stimson, J. A. (n.d.). <em><span class="nocase">Professional Writing in Politica
 Stinerock, R. (2022). <em><span class="nocase">Statistics with R – A Beginner’s Guide</span></em> (Second). Thousand Oaks, <span>CA</span>: Sage.
 </div>
 <div id="ref-worldbank:2024" class="csl-entry">
-World Bank. (2024). <em><span>World Development Indicators, 21.02.2024</span></em>. available online at <a href="https://datacatalog.worldbank.org/dataset/world-development-indicators" class="uri">https://datacatalog.worldbank.org/dataset/world-development-indicators</a>.
+The World Bank. (n.d.). <em><span>World Development Indicators</span></em>. <a href="https://datacatalog.worldbank.org/dataset/world-development-indicators">https://datacatalog.worldbank.org/dataset/world-development-indicators</a>
 </div>
 </div>
 </div>
